# qtopengl_examples

./: CMakeLists.txt  README.md  resources.qrc
include/: opengl_widget.h  opengl_window.hpp
shader/: uniform_color.frag
src/: main.cpp  main_opengl_widget_test.cpp  main_opengl_window_test.cpp  opengl_widget.cpp  opengl_window.cpp
src/shader/: pass_through.vert
